@@ -1,6 +1,12 @@
 repoze.who Changelog
 ====================
 
+Unreleased
+----------
+
+- ``repoze.who.plugins.htpasswd``:  defend against timing-based attacks.
+
+
 2.0a4 (2011-02-02)
 ------------------
 
@@ -34,6 +40,7 @@ repoze.who Changelog
   as a convenience for application-driven login / logout code, which would
   otherwise need to use private methods of the API, and reach down into
   its plugins.
+
 
 2.0a3 (2010-09-30)
 ------------------
@@ -71,6 +78,7 @@ repoze.who Changelog
   (added missing ``global_config`` argument).  See
   http://bugs.repoze.org/issue114
 
+
 2.0a2 (2010-03-25)
 ------------------
 
@@ -86,6 +94,7 @@ Backward Incompatibilities
 
 - Adjusted logging level for some lower-level details from ``info``
   to ``debug``.
+
 
 
 2.0a1 (2010-02-24)
@@ -153,6 +162,7 @@ Backward Incompatibilities
   - ``verify``
 
 
+
 1.0.18 (2009-11-05)
 -------------------
 
@@ -161,12 +171,14 @@ Backward Incompatibilities
   ``Expires`` attributes of those cookies.
 
 
+
 1.0.17 (2009-11-05)
 -------------------
 
 - Fixed the ``repoze.who.plugins.form.make_plugin`` factory's ``formcallable``
   argument handling, to allow passing in a dotted name (e.g., from a config
   file).
+
 
 
 1.0.16 (2009-11-04)
